# rollup-explorer-backend

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: audit.yml  lint.yml  release.yml  test.yml
backend/: .env  Dockerfile
backend/config/: default.toml  production.toml
backend/db/tests/: test.sql
backend/src/: lib.rs  settings.rs
backend/src/db/: migrator.rs
backend/src/open_api/: apis.rs  mod.rs
config/: config.json  default.toml  development.toml  production.toml
db/migrations/: 20220623141455_create_l2_blocks.sql
db/tests/: layer_message.sql  test.sql  test_last_finalized_monitor.sql  test_precommitted_monitor.sql
docker/: Dockerfile  docker-compose.yml
docs/: openapi.spec
frontend/: .env  Dockerfile  next.config.js  package.json
frontend/components/Footer/: index.tsx
frontend/components/Header/: index.tsx
frontend/constants/: index.ts
frontend/hooks/: index.ts
frontend/layouts/: BasicLayout.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/blocks/: Table.tsx  index.tsx
frontend/styles/: globals.css
scripts/: import_mock_data.sh  start.sh  start_be_dev.sh  stop.sh
src/: cache.rs  consts.rs  lib.rs  settings.rs  slack.rs
src/db/: mod.rs
src/db/models/: batch.rs  block.rs  block_batch.rs  block_result.rs  block_trace.rs  chunk.rs  layer_msg.rs  mod.rs  rollup_result.rs
src/job_scheduler/: last_finalized_monitor.rs  mod.rs  precommitted_monitor.rs
src/open_api/: apis.rs  mod.rs
(+31 files in other folders)
